--- a/public/stylesheets/variables.scss
+++ b/public/stylesheets/variables.scss
@@ -91,8 +91,6 @@ $icon-size-xl: 4rem; // 40px
 $icon-size-xxl: 6rem; // 60px
 $icon-size-xxxl: 8rem; // 80px
 
-$avatar-size-regular: 150px;
-
 $footer-height: 15em;
 
 $shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
